One-Instance _with_ALB.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues: [t1.micro, t2.nano, t2.micro, t2.small, t2.medium, t2.large, m1.small]
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Mappings:
  SubnetConfig:
      VPC:
        CIDR: "10.0.0.0/16"
      Public1:
        CIDR: "10.0.1.0/24"
      Public2:
        CIDR: "10.0.2.0/24"     
  AWSInstanceType2Arch:
    t2.micro:
      Arch: HVM64
  AWSRegionArch2AMI:
    us-east-1:
      PV64: ami-2a69aa47
      HVM64: ami-6869aa05
      HVMG2: ami-50b4f047
Resources:
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
        DefaultActions:
          - Type: forward
            TargetGroupArn:
             Ref: ALBTargetGroup
        LoadBalancerArn:
           Ref: ApplicationLoadBalancer
        Port: 80
        Protocol: HTTP
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
        Scheme: internet-facing
        Subnets:
            - Ref: PublicSubnet1
            - Ref: PublicSubnet2
        SecurityGroups:
            - Ref: 'InstanceSecurityGroup'
        LoadBalancerAttributes:
            - Key: idle_timeout.timeout_seconds
              Value: '50'
  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
        HealthCheckIntervalSeconds: 60
        UnhealthyThresholdCount: 10
        HealthCheckPath: /
        TargetType: instance
        Name: MyTargetGroup
        Port: 80
        Protocol: HTTP
        VpcId: !Ref "VPC"
        Targets:
        - Id: !Ref 'EC2PublicInstance1'
          Port: 80
        - Id: !Ref 'EC2PublicInstance2'
          Port: 80
        TargetGroupAttributes:
            - Key: deregistration_delay.timeout_seconds
              Value: 120
  EC2PublicInstance1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !FindInMap 
        - AWSRegionArch2AMI
        - !Ref 'AWS::Region'
        - !FindInMap 
          - AWSInstanceType2Arch
          - !Ref InstanceType
          - Arch
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - GroupSet:
            - !Ref InstanceSecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref PublicSubnet1
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            sudo yum update -y
            sudo yum install -y httpd
            sudo service httpd start
            sudo service httpd on
            sudo chmod 764 /var/www/html/index.html
            sudo echo "<html><body><h1>Welcome Server1</h1>" > /var/www/html/index.html
            sudo echo "Congratulations You are successfully launched Server1" >> /var/www/html/index.html
            sudo echo "</body></html>" >> /var/www/html/index.html
      Tags:
          -
            Key: "Name"
            Value: "Public1"
  EC2PublicInstance2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !FindInMap  
        - AWSRegionArch2AMI
        - !Ref 'AWS::Region'
        - !FindInMap 
          - AWSInstanceType2Arch
          - !Ref InstanceType
          - Arch
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - GroupSet:
            - !Ref InstanceSecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref PublicSubnet2
      UserData: 
        Fn::Base64:
          !Sub |
            #!/bin/bash
            sudo yum update -y
            sudo yum install -y httpd
            sudo service httpd start
            sudo service httpd on
            sudo chmod 764 /var/www/html/index.html
            sudo echo "<html><body><h1>Welcome Server2</h1>" > /var/www/html/index.html
            sudo echo "Congratulations You are successfully launched Server2" >> /var/www/html/index.html
            sudo echo "</body></html>" >> /var/www/html/index.html
      Tags:
          -
            Key: "Name"
            Value: "Public2"
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      CidrBlock:
          Fn::FindInMap:
            - "SubnetConfig"
            - "VPC"
            - "CIDR"
      Tags:
          -
            Key: "Application"
            Value:
              Ref: "AWS::StackName"
          -
            Key: "Network"
            Value: "Public"
          -
            Key: "Name"
            Value: "VPC Public and Private with NAT"
  PublicSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId:
        Ref: "VPC"
      CidrBlock:
          Fn::FindInMap:
            - "SubnetConfig"
            - "Public1"
            - "CIDR"
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: "true"
      Tags:
        -
           Key: "Name"
           Value: "Public1"
  PublicSubnet2:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId:
        Ref: "VPC"
      CidrBlock:
          Fn::FindInMap:
            - "SubnetConfig"
            - "Public2"
            - "CIDR"
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: "true"
      Tags:
        -
           Key: "Name"
           Value: "Public2"  
  InternetGateway:
      Type: "AWS::EC2::InternetGateway"
      Properties:
         Tags:
          -
            Key: "Name"
            Value: "PublicIGW"
  GatewayToInternet:
      Type: "AWS::EC2::VPCGatewayAttachment"
      Properties:
        VpcId:
          Ref: "VPC"
        InternetGatewayId:
          Ref: "InternetGateway"
  PublicRouteTable1:
      Type: "AWS::EC2::RouteTable"
      Properties:
        VpcId:
          Ref: "VPC"
        Tags:
          -
            Key: "Name"
            Value: "PublicRT"
  PublicRoute1:
      Type: "AWS::EC2::Route"
      DependsOn: "GatewayToInternet"
      Properties:
        RouteTableId:
          Ref: "PublicRouteTable1"
        DestinationCidrBlock: "0.0.0.0/0"
        GatewayId:
          Ref: "InternetGateway"
  PublicSubnetRouteTableAssociation1:
      Type: "AWS::EC2::SubnetRouteTableAssociation"
      Properties:
        SubnetId: !Ref 'PublicSubnet1'
        RouteTableId: !Ref 'PublicRouteTable1'
  PublicRouteTable2:
      Type: "AWS::EC2::RouteTable"
      Properties:
        VpcId:
          Ref: "VPC"
        Tags:
          -
            Key: "Name"
            Value: "PublicRT2"
  PublicRoute2:
      Type: "AWS::EC2::Route"
      DependsOn: "GatewayToInternet"
      Properties:
        RouteTableId:
          Ref: "PublicRouteTable2"
        DestinationCidrBlock: "0.0.0.0/0"
        GatewayId:
          Ref: "InternetGateway"
  PublicSubnetRouteTableAssociation2:
      Type: "AWS::EC2::SubnetRouteTableAssociation"
      Properties:
        SubnetId: !Ref 'PublicSubnet2'
        RouteTableId: !Ref 'PublicRouteTable2'  
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      VpcId:
         Ref: "VPC"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref 'SSHLocation'
